--- a/src/App.css
+++ b/src/App.css
@@ -18,3 +18,24 @@
   color: #61dafb;
 }
 
+.example-enter {
+  max-height: 0;
+  opacity: 0.01;
+}
+
+.example-enter.example-enter-active {
+  max-height: 1000px;
+  opacity: 1;
+  transition: max-height 500ms ease-in-out, opacity 500ms ease-in;
+}
+
+.example-leave {
+  max-height: 1000px;
+  opacity: 1;
+}
+
+.example-leave.example-leave-active {
+  max-height: 0;
+  opacity: 0.01;
+  transition: max-height 300ms cubic-bezier(0, 1, 0, 1), opacity 300ms ease-in;
+}
